--- a/Unit 3/style.css
+++ b/Unit 3/style.css
@@ -17,16 +17,16 @@ text-align: justify;
 }
 
 h1 {
-	font-family: verdana, sans-serif;
+	font-family: 'Rokkitt', serif;
 	font-size: 100px;
-	font-weight: bold;
 	font-color: #FF3E0D;
 }
 
 h3 { 
+font-family: 'Rokkitt', serif;
 font-style: italic;
-font-family: Arial, sans-serif;
 font-size: 48px;
+
 }
 
 p {
@@ -35,7 +35,7 @@ p {
 }
 
 p { 
-	font-family: helvetica;
+	font-family: 'Source Sans Pro', sans-serif;
 font-size: 24px;
 background-color: #E80C58
 
